--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -5,16 +5,17 @@
 
 \section{Introduction}
 
-~\gls{ta} proteins are defined by their single carboxy-terminal~\gls{tms} with a cytosolic facing amino-terminus and are a topologically distinct class of intracellular proteins.
+\gls{ta} proteins are defined by their single carboxy-terminal~\gls{tms} with a cytosolic facing amino-terminus and are a topologically distinct class of intracellular proteins.
 ~\gls{ta} proteins are involved in a range of key cellular functions including protein translocation \cite{Osborne2005} and apoptosis \cite{Hockenbery1990}.
 Additionally, within the~\gls{ta} class of proteins are a set of vesicle fusion proteins called~\gls{snare} proteins \cite{Ungar2003}, which are contain typically hydrophobic \gls{tmh}s \cite{Kalbfleisch2007}.
 There is biomedical interest in~\gls{snare} drug delivery mechanisms.
-~\gls{snare}s can fuse liposomes containing various drug payloads into the membrane.
+~\gls{snare}s can fuse liposomes containing various drug payloads into the membrane. %reference needed
 
-This hydrophobicity appears to be a determinate factor in the precise delivery mechanistic route that a~\gls{ta} proteins use for insertion~\cite{Rabu2008, Rabu2009}, for which there is evidence demonstrating that are several mechanisms~\cite{Rabu2009, Johnson2013}.
+The \gls{ta} protein's \gls{tmh} is unusual in that it is both the anchor and the targetting factor for the \gls{er} \cite{Kutay1993}.
+Furthermore, the hydrophobicity appears to be a determinate factor in the precise delivery mechanistic route that a~\gls{ta} proteins use for insertion~\cite{Rabu2008, Rabu2009}, for which there is evidence demonstrating that are several mechanisms~\cite{Rabu2009, Johnson2013}(Figure \ref{biogenesis-overview}).
+Altering the hydrophobicity, at least in the case of PTP1b, also determinates the localisation of the \gls{ta} protein to either the mitochondrial membrane or the \gls{er} membrane, or rather a more hydrophobic \gls{ta} protein \gls{tmh} is less likely to localise to the mitochondrial membrane \cite{Fueller2015}.
 
-Whilst most eukaryotic~\gls{ta} proteins are inserted into the~\gls{er}.
-Their studies have moved the focus of spontaneous insertion away from the loop regions and onto the physicochemical factors of the \gls{tmh} itself.
+Generally, studies have moved the focus of spontaneous insertion away from the loop regions and onto the physicochemical factors of the \gls{tmh} itself.
 
 \begin{figure}[!ht]
 \centering
@@ -32,21 +33,6 @@ Their studies have moved the focus of spontaneous insertion away from the loop r
 
 \gls{ta} proteins are integrated into the~\gls{er} membrane by different molecular machinery than the co-translational proteins.
 These mechanisms include the Hsp70/Hsc40 chaperone system~\cite{Rabu2008}, the TRC40/Get3 ATP dependent chaperone system~\cite{Johnson2013, Chartron2012, Wang2014},
-
-
-%The pipeline generates a list of singlepass proteins with a transmembrane domain close to the C terminal, that are not splice isoforms.
-%A previous study by Kalbfleisch \textit{et al.} published in Traffic 2007 (8: 1687-1694) predicted 411 tail anchor proteins~\cite{Kalbfleisch2007}.
-%The tools developed herein are openly available for re-application to other datasets.
-
-%Need a figure here of a crystal structure TA.
-
-
-%Additionally, within the tail-anchored class of proteins are a set of vesicle fusion proteins called \gls{snare} proteins.
-%There is biomedical interest in \gls{snare} drug delivery mechanisms.
-
-%\gls{snare}s can fuse liposomes containing various drug payloads into the membrane.
-%Notably, known \gls{snare} \gls{tmh}s are highly hydrophobic even compared to other tail anchored \gls{tmh}s~\cite{Kalbfleisch2007}.
-
 
 \section{Methods}
 
